AM_CXXFLAGS = $(PICKY_CXXFLAGS)
lib_LTLIBRARIES = libjayhawk.la
common_source = hello.cc instr_data_deps.cc print_cfg.cc graph.cc graph.h set_idioms.h dominator_utility.h dominator_utility.cc control_dependence_graph.cc control_dependence_graph.h instr_ctrl_deps.cc instr_ctrl_deps.h
libjayhawk_la_SOURCES = $(common_source)

SUBDIRS = third_party . tests
