AM_CXXFLAGS = $(PICKY_CXXFLAGS)
lib_LTLIBRARIES = libjayhawk.la
common_source = graph.cc graph.h set_idioms.h dominator_utility.h dominator_utility.cc utility_functions.h utility_functions.cc instr_prog_deps.h instr_prog_deps.cc if_conversion.h if_conversion.cc boolean_algebra.h
libjayhawk_la_SOURCES = $(common_source)

SUBDIRS = third_party . tests
